--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "effector": "^23.1.0",
     "effector-react": "^23.1.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
